# book-app

./: .gitignore  ARCHITECTURE.md  DEVELOPMENT_JOURNAL.md  LEARNING_PLAN.md  README.MD  conftest.py  request.http  start-servers.sh
backend/: __init__.py  alembic.ini  pyproject.toml  requirements.txt  test_milestone_2_1.py  test_milestone_2_2.py  test_milestone_2_3.py  test_milestone_3_1.py
backend/alembic/: env.py
backend/alembic/versions/: 7f62f7ce256f_create_books_table.py  b8fd17dcb42f_add_database_indexes_for_performance.py
backend/app/: database.py  main.py  models.py  schemas.py  seed.py
backend/app/api/: books.py  dependencies.py
backend/app/repositories/: __init__.py  book_repository_interface.py  sql_book_repository.py
backend/app/services/: book_service.py
backend/bookapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_database.py  test_milestone_1_2.py  test_milestone_2_1.py  test_milestone_2_2.py  test_milestone_2_3.py  test_milestone_3_1.py  test_milestone_3_2.py  test_repositories.py  test_setup.py
frontend/: nodemon.json  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  ui5.yaml
frontend/webapp/: index.html  index.js  index.ts  manifest.json
frontend/webapp/bookapp/: Component.js  Component.ts  manifest.json
frontend/webapp/bookapp/controller/: App.controller.js  Main.controller.js  Main.controller.ts
frontend/webapp/bookapp/model/: models.js  models.ts  types.ts
frontend/webapp/bookapp/service/: BookService.js  BookService.ts
frontend/webapp/css/: style.css
(+3 files in other folders)
